<resources>
    <string name="app_name">Heart Health Gauge</string>
    <string name="title_home">Home</string>
    <string name="title_recent">Recent</string>
    <string name="title_summaries">Summaries</string>
    <string name="currUser">Current User: </string>
    <string name="nocurruser">No User Selected\nA new user will be created.</string>
    <string name="user_id">Name: </string>
    <string name="date"> </string>
    <string name="systolic_label">Systolic Reading:</string>
    <string name="diastolic_label">Diastolic Reading:</string>
    <string name="addUser">Add New\nRecord</string>
    <string name="setUserText">Click a user to set it as the current user</string>
    <string name="clearUser">Clear\nCurrent User</string>

    <string name="name_hint">Name</string>
    <string name="reading_hint">mm Hg</string>
    <string name="name_label">Name</string>

    <string name="cancelbtn">Cancel</string>
    <string name="updatebtn">Update</string>
    <string name="deletebtn">Delete</string>
    <string name="systolic_reading">Systolic Reading</string>
    <string name="diastolic_reading">Diastolic Reading</string>
    <string name="user_summaries">User Summaries</string>
    <string name="edit_button">Edit button</string>

    <string name="avgCond">Average Condition</string>
</resources>
