<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="64dp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/user_id"
        android:textSize="16sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="64dp"
        android:layout_row="0"
        android:layout_column="1"
        android:inputType="textPersonName"
        android:hint="@string/name_hint" />

    <TextView
        android:id="@+id/systolic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:text="@string/systolic_label"
        android:layout_column="0"
        android:layout_row="1"
        android:textSize="16sp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/systolic_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:layout_row="1"
        android:layout_column="1"
        android:inputType="number"
        android:hint="@string/reading_hint" />

    <TextView
        android:id="@+id/diastolic_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/diastolic_label"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/diastolic_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:layout_column="1"
        android:layout_row="2"
        android:inputType="number"
        android:hint="@string/reading_hint" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/check_button"
        android:onClick="onCheckClick"/>

</GridLayout>