<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/summary_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="0, 1">

    <TableRow>
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/syst_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/systolic_reading"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sys_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/dia_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diastolic_reading"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dia_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/cond_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Average Condition"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/cond_val"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cond_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"/>
    </TableRow>
</TableLayout>